--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:10.855736Z",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:10.870699Z",
@@ -148,7 +148,15 @@
      "shell.execute_reply": "2021-03-07T17:07:10.873905Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/src/Interpolate_to_dest_grid.h\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/Interpolate_to_dest_grid.h\n",
     "\n",
@@ -258,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:10.880829Z",
@@ -267,7 +275,15 @@
      "shell.execute_reply": "2021-03-07T17:07:10.883666Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/src/interpolate_set_of_points_in_file.h\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/interpolate_set_of_points_in_file.h\n",
     "\n",
@@ -334,7 +350,8 @@
     "    points_dest_grid_x = (CCTK_REAL  *)malloc(sizeof(CCTK_REAL)*num_dest_grid_points);\n",
     "    points_dest_grid_y = (CCTK_REAL  *)malloc(sizeof(CCTK_REAL)*num_dest_grid_points);\n",
     "    points_dest_grid_z = (CCTK_REAL  *)malloc(sizeof(CCTK_REAL)*num_dest_grid_points);\n",
-    "    ALLOCATE_2D_GENERIC(CCTK_REAL,output_f,1,num_dest_grid_points);\n",
+    "    output_f = (CCTK_REAL **)malloc(1 * sizeof(CCTK_REAL *));\n",
+    "    for(int cc = 0; cc < 1; cc++) output_f[cc]=(CCTK_REAL *)malloc(num_dest_grid_points * sizeof(CCTK_REAL));\n",
     "\n",
     "    // Step 1.c: Store cell-centered points to allocated memory.\n",
     "    fread(points_dest_grid_x, sizeof(CCTK_REAL), num_dest_grid_points, pointsx_file);\n",
@@ -430,8 +447,8 @@
     "      points_dest_grid_x = (CCTK_REAL  *)malloc(sizeof(CCTK_REAL)*num_dest_grid_points);\n",
     "      points_dest_grid_y = (CCTK_REAL  *)malloc(sizeof(CCTK_REAL)*num_dest_grid_points);\n",
     "      points_dest_grid_z = (CCTK_REAL  *)malloc(sizeof(CCTK_REAL)*num_dest_grid_points);\n",
-    "      output_f = (CCTK_REAL **)malloc(sizeof(CCTK_REAL *)*num_dest_grid_points);\n",
-    "      ALLOCATE_2D_GENERIC(CCTK_REAL,output_f,1,num_dest_grid_points);\n",
+    "      output_f = (CCTK_REAL **)malloc(1 * sizeof(CCTK_REAL *));\n",
+    "      for(int cc = 0; cc < 1; cc++) output_f[cc]=(CCTK_REAL *)malloc(num_dest_grid_points * sizeof(CCTK_REAL));\n",
     "\n",
     "      Interpolate_to_dest_grid(cctkGH, num_dest_grid_points, order,\n",
     "                               points_dest_grid_x,points_dest_grid_y,points_dest_grid_z, input_array_names, output_f);\n",
@@ -463,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:10.889506Z",
@@ -472,7 +489,15 @@
      "shell.execute_reply": "2021-03-07T17:07:10.891873Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/src/output_to_file.h\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/output_to_file.h\n",
     "\n",
@@ -548,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:10.900193Z",
@@ -557,7 +582,15 @@
      "shell.execute_reply": "2021-03-07T17:07:10.902975Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/src/main_function.cc\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/main_function.cc\n",
     "\n",
@@ -661,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:10.910393Z",
@@ -670,7 +703,15 @@
      "shell.execute_reply": "2021-03-07T17:07:10.913594Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/src/standalone/standalone_C_code_genpoints.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/standalone/standalone_C_code_genpoints.c\n",
     "\n",
@@ -756,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:10.925126Z",
@@ -842,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:11.252796Z",
@@ -888,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:11.265836Z",
@@ -957,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:11.364586Z",
@@ -1022,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:11.461298Z",
@@ -1054,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:12.299807Z",
@@ -1110,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:12.691469Z",
@@ -1119,7 +1160,15 @@
      "shell.execute_reply": "2021-03-07T17:07:12.694545Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/src/unstagger_A_fields.cc\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/unstagger_A_fields.cc\n",
     "\n",
@@ -1182,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:12.705658Z",
@@ -1230,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:12.761512Z",
@@ -1303,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:12.865137Z",
@@ -1363,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:12.957431Z",
@@ -1453,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.458692Z",
@@ -1496,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.466156Z",
@@ -1569,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.474628Z",
@@ -1633,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.481376Z",
@@ -1672,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.488612Z",
@@ -1728,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.505221Z",
@@ -1770,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1809,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.556180Z",
@@ -1818,7 +1867,15 @@
      "shell.execute_reply": "2021-03-07T17:07:27.559097Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/construct_function_to_interpolate__store_to_interped_gf.cc\n",
     "#include <stdio.h>\n",
@@ -1944,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.567119Z",
@@ -1977,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.575270Z",
@@ -1994,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.585137Z",
@@ -2004,7 +2061,15 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/src/interp_counter.cc\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/interp_counter.cc\n",
     "#include <assert.h>\n",
@@ -2071,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.597921Z",
@@ -2124,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.607861Z",
@@ -2334,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.616070Z",
@@ -2343,7 +2408,15 @@
      "shell.execute_reply": "2021-03-07T17:07:27.618519Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/src/make.code.defn\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/src/make.code.defn\n",
     "# Main make.code.defn file for thorn interp_arbgrid_MO_ETK\n",
@@ -2367,7 +2440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.625492Z",
@@ -2376,7 +2449,15 @@
      "shell.execute_reply": "2021-03-07T17:07:27.629255Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/interface.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/interface.ccl\n",
     "\n",
@@ -2428,7 +2509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.635836Z",
@@ -2437,7 +2518,15 @@
      "shell.execute_reply": "2021-03-07T17:07:27.638955Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/param.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/param.ccl\n",
     "\n",
@@ -2577,7 +2666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.647153Z",
@@ -2586,7 +2675,15 @@
      "shell.execute_reply": "2021-03-07T17:07:27.650034Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing interp_arbgrid_MO_ETK/schedule.ccl\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/schedule.ccl\n",
     "\n",
@@ -2814,7 +2911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:07:27.657108Z",
@@ -2823,7 +2920,18 @@
      "shell.execute_reply": "2021-03-07T17:07:33.956580Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-ETK_thorn-\n",
+      "    Interpolation_to_Arbitrary_Grids_multi_order.tex, and compiled LaTeX\n",
+      "    file to PDF file Tutorial-ETK_thorn-\n",
+      "    Interpolation_to_Arbitrary_Grids_multi_order.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order\")"
@@ -2846,7 +2954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
