--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Stilde_flux.ipynb
@@ -125,9 +125,7 @@
     "# to declare them as C parameters in NRPy+. We will denote this with the _face infix/suffix.\n",
     "alpha_face,gammadet_face = gri.register_gridfunctions(\"AUXEVOL\",[\"alpha_face\",\"gammadet_face\"])\n",
     "gamma_faceDD = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceDD\",\"sym01\")\n",
-    "gamma_faceUU = ixp.register_gridfunctions_for_single_rank2(\"AUXEVOL\",\"gamma_faceUU\",\"sym01\")\n",
     "beta_faceU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"beta_faceU\")\n",
-    "phi_face = gri.register_gridfunctions(\"AUXEVOL\",\"phi_face\") # Needed only for ADM-BSSN-ADM workaround\n",
     "\n",
     "# We'll need some more gridfunctions, now, to represent the reconstructions of BU and ValenciavU\n",
     "# on the right and left faces\n",
@@ -193,7 +191,6 @@
     "Sf.generate_C_code_for_Stilde_flux(os.path.join(out_dir,subdir),True, alpha_face, gamma_faceDD, beta_faceU,\n",
     "                                   Valenciav_rU, B_rU, Valenciav_lU, B_lU,\n",
     "                                   Stilde_flux_HLLED, sqrt4pi,\n",
-    "                                   gamma_faceUU=gamma_faceUU,phi_face=phi_face,\n",
     "                                   outCparams = \"outCverbose=False,CSE_sorting=none\",write_cmax_cmin=True)"
    ]
   },
@@ -345,7 +342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing Validation/Stilde_flux_unit_test.C\n"
+      "Overwriting Validation/Stilde_flux_unit_test.C\n"
      ]
     }
    ],
@@ -374,44 +371,37 @@
     "\n",
     "// Let's also #define the NRPy+ gridfunctions\n",
     "#define ALPHA_FACEGF 0\n",
-    "#define PHI_FACEGF 1\n",
-    "#define GAMMA_FACEDD00GF 2\n",
-    "#define GAMMA_FACEDD01GF 3\n",
-    "#define GAMMA_FACEDD02GF 4\n",
-    "#define GAMMA_FACEDD11GF 5\n",
-    "#define GAMMA_FACEDD12GF 6\n",
-    "#define GAMMA_FACEDD22GF 7\n",
-    "#define BETA_FACEU0GF 8\n",
-    "#define BETA_FACEU1GF 9\n",
-    "#define BETA_FACEU2GF 10\n",
-    "#define VALENCIAV_RU0GF 11\n",
-    "#define VALENCIAV_RU1GF 12\n",
-    "#define VALENCIAV_RU2GF 13\n",
-    "#define B_RU0GF 14\n",
-    "#define B_RU1GF 15\n",
-    "#define B_RU2GF 16\n",
-    "#define VALENCIAV_LU0GF 17\n",
-    "#define VALENCIAV_LU1GF 18\n",
-    "#define VALENCIAV_LU2GF 19\n",
-    "#define B_LU0GF 20\n",
-    "#define B_LU1GF 21\n",
-    "#define B_LU2GF 22\n",
-    "#define CMAX_XGF 23\n",
-    "#define CMIN_XGF 24\n",
-    "#define CMAX_YGF 25\n",
-    "#define CMIN_YGF 26\n",
-    "#define CMAX_ZGF 27\n",
-    "#define CMIN_ZGF 28\n",
-    "#define GAMMA_FACEUU00GF 29\n",
-    "#define GAMMA_FACEUU01GF 30\n",
-    "#define GAMMA_FACEUU02GF 31\n",
-    "#define GAMMA_FACEUU11GF 32\n",
-    "#define GAMMA_FACEUU12GF 33\n",
-    "#define GAMMA_FACEUU22GF 34\n",
-    "#define STILDE_FLUX_HLLED0GF 35\n",
-    "#define STILDE_FLUX_HLLED1GF 36\n",
-    "#define STILDE_FLUX_HLLED2GF 37\n",
-    "#define NUM_AUXEVOL_GFS 38\n",
+    "#define GAMMA_FACEDD00GF 1\n",
+    "#define GAMMA_FACEDD01GF 2\n",
+    "#define GAMMA_FACEDD02GF 3\n",
+    "#define GAMMA_FACEDD11GF 4\n",
+    "#define GAMMA_FACEDD12GF 5\n",
+    "#define GAMMA_FACEDD22GF 6\n",
+    "#define BETA_FACEU0GF 7\n",
+    "#define BETA_FACEU1GF 8\n",
+    "#define BETA_FACEU2GF 9\n",
+    "#define VALENCIAV_RU0GF 10\n",
+    "#define VALENCIAV_RU1GF 11\n",
+    "#define VALENCIAV_RU2GF 12\n",
+    "#define B_RU0GF 13\n",
+    "#define B_RU1GF 14\n",
+    "#define B_RU2GF 15\n",
+    "#define VALENCIAV_LU0GF 16\n",
+    "#define VALENCIAV_LU1GF 17\n",
+    "#define VALENCIAV_LU2GF 18\n",
+    "#define B_LU0GF 19\n",
+    "#define B_LU1GF 20\n",
+    "#define B_LU2GF 21\n",
+    "#define CMAX_XGF 22\n",
+    "#define CMIN_XGF 23\n",
+    "#define CMAX_YGF 24\n",
+    "#define CMIN_YGF 25\n",
+    "#define CMAX_ZGF 26\n",
+    "#define CMIN_ZGF 27\n",
+    "#define STILDE_FLUX_HLLED0GF 28\n",
+    "#define STILDE_FLUX_HLLED1GF 29\n",
+    "#define STILDE_FLUX_HLLED2GF 30\n",
+    "#define NUM_AUXEVOL_GFS 31\n",
     "\n",
     "#define STILDED0GF 0\n",
     "#define STILDED1GF 1\n",
@@ -523,7 +513,6 @@
     "            METRIC_LAP_PSI4[PSI4] = METRIC_LAP_PSI4[PSI2]*METRIC_LAP_PSI4[PSI2];\n",
     "            const double Psim4 = 1.0/METRIC_LAP_PSI4[PSI4];\n",
     "            METRIC_LAP_PSI4[PSIM4] = Psim4;\n",
-    "            auxevol_gfs[IDX4S(PHI_FACEGF, i0, i1, i2)] = 0.25 * log(METRIC_LAP_PSI4[PSI4]);\n",
     "            // Copied from the ETK implementation\n",
     "                CCTK_REAL gtxxL = gammaDD00*Psim4;\n",
     "                CCTK_REAL gtxyL = gammaDD01*Psim4;\n",
@@ -557,12 +546,6 @@
     "            FACEVAL[GUPXX] = ( gtyyL * gtzzL - gtyzL * gtyzL )/gtijdet;\n",
     "            FACEVAL[GUPYY] = ( gtxxL * gtzzL - gtxzL * gtxzL )/gtijdet;\n",
     "            FACEVAL[GUPZZ] = ( gtxxL * gtyyL - gtxyL * gtxyL )/gtijdet;\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU00GF, i0,i1,i2)] = tmp6*(gammaDD11*gammaDD22 - ((gammaDD12)*(gammaDD12)));\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU01GF, i0,i1,i2)] = tmp6*(-gammaDD01*gammaDD22 + gammaDD02*gammaDD12);\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU02GF, i0,i1,i2)] = tmp6*(gammaDD01*gammaDD12 - gammaDD02*gammaDD11);\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU11GF, i0,i1,i2)] = tmp6*(gammaDD00*gammaDD22 - ((gammaDD02)*(gammaDD02)));\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU12GF, i0,i1,i2)] = tmp6*(-gammaDD00*gammaDD12 + gammaDD01*gammaDD02);\n",
-    "           auxevol_gfs[IDX4S(GAMMA_FACEUU22GF, i0,i1,i2)] = tmp6*(gammaDD00*gammaDD11 - ((gammaDD01)*(gammaDD01)));\n",
     "            /*auxevol_gfs[IDX4S(GAMMA_FACEUU00GF, i0,i1,i2)] = FACEVAL[GUPXX];\n",
     "            auxevol_gfs[IDX4S(GAMMA_FACEUU11GF, i0,i1,i2)] = FACEVAL[GUPYY];\n",
     "            auxevol_gfs[IDX4S(GAMMA_FACEUU22GF, i0,i1,i2)] = FACEVAL[GUPZZ];*/\n",
@@ -693,10 +676,10 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_flux_unit_test.C -o Validation/Stilde_flux_unit_test -lm`...\n",
-      "(BENCH): Finished executing in 0.6106674671173096 seconds.\n",
+      "(BENCH): Finished executing in 1.0116524696350098 seconds.\n",
       "Finished compilation.\n",
-      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./Validation/Stilde_flux_unit_test `...\n",
-      "(BENCH): Finished executing in 0.2089705467224121 seconds.\n"
+      "(EXEC): Executing `taskset -c 0,1,2,3 ./Validation/Stilde_flux_unit_test `...\n",
+      "(BENCH): Finished executing in 0.2095193862915039 seconds.\n"
      ]
     }
    ],
@@ -746,9 +729,9 @@
      "output_type": "stream",
      "text": [
       "Now comparing the significant digits of agreements in each direction...\n",
-      "SDA in Stilde_rhsD0 = 16.0\n",
-      "SDA in Stilde_rhsD1 = 15.4\n",
-      "SDA in Stilde_rhsD2 = 15.9\n"
+      "SDA in Stilde_rhsD0 = 15.6\n",
+      "SDA in Stilde_rhsD1 = 15.6\n",
+      "SDA in Stilde_rhsD2 = 15.8\n"
      ]
     }
    ],
@@ -806,7 +789,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -820,7 +803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
